--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
+section {
+  padding: 20px 0px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.conteiner {
+  margin: 0 auto;
+  max-width: 1160px;
+  padding: 0px 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+/* =================Адаптив================ */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@media screen and (max-width: 1200px) {
+  /* .container {
+    max-width: 960px;
+  } */
 }
-
-.App-link {
-  color: #61dafb;
+@media screen and (max-width: 992px) {
+  /* .container {
+    width: 720px;
+  } */
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media screen and (max-width: 768px) {
+  /* .container {
+    max-width: 540px;
+  } */
+}
+@media screen and (max-width: 576px) {
+  /* .container {
+    max-width: 90%;
+  } */
 }
