--- a/src/components/style.css
+++ b/src/components/style.css
@@ -2,7 +2,7 @@
   padding-bottom: 10px;
   border-radius: 15px;
   max-width: 300px;
-  max-height: 400px;
+  max-height: 900px;
   background-color: #222222;
   display: flex;
   flex-direction: column;
@@ -11,6 +11,10 @@
   font-size: 16px;
   transition: all 0.3s ease;
   text-align: center;
+}
+
+.test__title {
+  padding: 0px 5px;
 }
 
 .test + .test {
@@ -32,7 +36,7 @@
 
 .test__description {
   margin-top: 8px;
-  padding: 10px 0px;
+  padding: 10px 3px;
   border-bottom: #121212 2px solid;
 }
 
@@ -237,6 +241,19 @@
   opacity: 50%;
 }
 
+.test-home__title {
+  padding: 0px 5px;
+}
+
+.test-home__description {
+  padding: 7px 3px;
+}
+
+/* .test-home__numbers-questions-text {
+  color: #d503ff;
+  text-shadow: 0px 0px 30px #d503ff;
+} */
+
 /* =================Адаптив================ */
 
 @media screen and (max-width: 1200px) {
@@ -257,7 +274,7 @@
 }
 @media screen and (max-width: 576px) {
   .test {
-    max-width: 200px;
+    max-width: 250px;
   }
 
   .test + .test {
