--- a/src/components/style.css
+++ b/src/components/style.css
@@ -155,6 +155,7 @@
   cursor: pointer;
   display: block;
   width: 100%;
+  /* background-color: #d503ff; */
   background-color: #d503ff;
   transition: all 0.3s ease;
 }
@@ -168,12 +169,21 @@
 .test-result__btn-exit {
   border-radius: 0px 0px 15px 15px;
   margin-top: 0px;
-  background: #8702a2;
+  background: #a52a2a;
+}
+
+.test-result__btn-show {
+  margin-top: 0px;
+  background: #222222;
+}
+
+.test-result__btn-show:hover {
+  margin: 4px 0px;
 }
 
 .test-result__btn-exit:hover {
-  margin-top: 4px;
-  box-shadow: 0px 0px 12px #8702a2;
+  margin-top: 3px;
+  box-shadow: 0px 0px 12px #c60024;
 }
 
 .test-result__like {
@@ -195,6 +205,39 @@
 .test-result__like-img:hover {
   background-color: #d503ff;
   box-shadow: 0px 0px 15px #d503ff;
+}
+
+.test-result__answers {
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #222222;
+  max-width: 700px;
+  border-radius: 15px;
+  text-align: center;
+  transition: all 0.3s ease;
+}
+
+.test-result__answer {
+  padding: 20px 0px;
+  /* border: #121212 3px solid; */
+}
+
+.test-result__answer-value {
+  padding: 10px 20px;
+  cursor: pointer;
+  background-color: #121212;
+  border-radius: 7px;
+  transition: all 0.3s ease;
+  text-align: center;
+  width: 100%;
+}
+
+.test-result__answer-question {
+  margin-bottom: 10px;
+}
+
+.test-result__answer-value + .test-result__answer-value {
+  margin-top: 7px;
 }
 
 /* ============ Test home ============== */
