--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -1,7 +1,7 @@
 .header {
-  padding: 7px 0px;
-  background-color: #222222;
-  opacity: 85%;
+  padding: 5px 0px;
+  background-color: #2e2e2e;
+  /* opacity: 85%; */
   position: sticky;
   top: 0;
 }
@@ -15,18 +15,24 @@
 .header__logo {
   display: flex;
   align-items: center;
-  font-size: 18px;
-  font-weight: 400;
+  font-size: 24px;
+  font-weight: 900;
+  color: #ff158b;
+  transition: all 0.3s ease;
 }
 
 .header__logo:hover {
-  color: #d503ff;
-  text-shadow: 0px 0px 45px #d503ff;
+  transform: scale3d(1.1, 1.1, 1.1);
 }
 
 .header__logo-img {
-  max-width: 30px;
+  max-width: 44px;
   margin-left: 7px;
+  cursor: pointer;
+}
+
+.navigation {
+  background: transparent;
 }
 
 .navigation__list {
@@ -39,12 +45,16 @@
 } */
 
 .navigation__link {
-  padding: 10px;
+  padding: 16px;
   transition: all 0.3s ease;
 }
 
 .navigation__link:hover {
-  background-color: #8700a2;
+  outline: 1px #ff158b solid;
+  outline-offset: -2px;
+  color: #ff158b;
+  box-shadow: 0px 0px 3px #ff158b;
+  text-shadow: 0px 0px 3px #ff158b;
 }
 
 /* =================Адаптив================ */
