--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,9 +1,8 @@
 .test {
   padding-bottom: 10px;
-  border-radius: 15px;
-  max-width: 300px;
-  max-height: 900px;
-  background-color: #222222;
+  border-radius: 20px;
+  width: 420px;
+  background-color: #2e2e2e;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,36 +13,43 @@
 }
 
 .test__title {
-  padding: 0px 5px;
+  font-weight: 700;
+  font-size: 18px;
+  padding: 15px 10px;
 }
 
 .test + .test {
-  margin-left: 23px;
+  margin-left: 10px;
 }
 .test:hover {
-  box-shadow: 0px 0px 15px #d503ff;
+  box-shadow: 0px 0px 25px #ff158b;
+  outline: #ff158b 4px solid;
+  transform: scale3d(1.07, 1.07, 1.07);
 }
 
 .test__img {
   width: 100%;
+  height: 250px;
   border-radius: 15px 15px 0px 0px;
-  max-height: 190px;
 }
 
-.test__title {
-  margin-top: 7px;
+.test__body {
+  height: 250px;
 }
 
 .test__description {
-  margin-top: 8px;
-  padding: 10px 3px;
-  border-bottom: #121212 2px solid;
+  padding: 10px 10px;
+  padding-bottom: 50px;
+  color: rgba(255, 255, 255, 0.578);
 }
 
 .test__reactions {
+  border-top: #202020 1px solid;
   padding-top: 10px;
   display: flex;
   align-items: center;
+  width: 100%;
+  justify-content: center;
 }
 
 .test__reactions-like {
@@ -138,7 +144,7 @@
 .test-result__inner {
   margin: 50px auto;
   padding-top: 20px;
-  background-color: #222222;
+  background-color: #2e2e2e;
   max-width: 700px;
   border-radius: 15px;
   text-align: center;
@@ -156,28 +162,31 @@
   display: block;
   width: 100%;
   /* background-color: #d503ff; */
-  background-color: #d503ff;
+  /* background-color: #ff158b; */
   transition: all 0.3s ease;
-  box-shadow: 0px 0px 12px #d503ff;
+  outline: 1px #ff158b solid;
+  outline-offset: -3px;
+  color: #ff158b;
+  background-color: transparent;
+  font-weight: 700;
 }
 
 .test-result__btn:hover {
-  /* outline: rgb(42, 42, 42) 3px solid;
-  outline-offset: -3px; */
-  font-size: 23px;
+  transform: scale3d(1.2, 1.2, 1.2);
+  box-shadow: 0px 0px 5px #ff158b;
+  text-shadow: 0px 0px 1px #ff158b;
 }
 
 .test-result__btn-exit {
   border-radius: 0px 0px 15px 15px;
   margin-top: 0px;
-  background: #da1010;
-  box-shadow: 0px 0px 6px #da1010;
+  /* background-color: #ff158b; */
+  transition: all 0.3s ease;
 }
 
 .test-result__btn-show {
   margin-top: 0px;
-  background: #222222;
-  box-shadow: 0px 0px 6px #222222;
+  transition: all 0.3s ease;
 }
 
 .test-result__btn-show:hover {
@@ -244,8 +253,8 @@
 
 .test-home__inner {
   margin: 0 auto;
-  background-color: #222222;
-  max-width: 500px;
+  background-color: #2e2e2e;
+  max-width: 450px;
   text-align: center;
   border-radius: 15px;
 }
@@ -272,24 +281,35 @@
 .test-home__btn {
   padding: 10px;
   margin-top: 15px;
-  background-color: #d503ff;
+
   display: block;
   align-items: center;
   width: 100%;
   border-radius: 0px 0px 15px 15px;
   transition: all 0.3s ease;
+  /* color: #2e2e2e; */
+  font-weight: 700;
+  outline: 1px #ff158b solid;
+  outline-offset: -2px;
+  color: #ff158b;
+  background-color: transparent;
+  box-shadow: 0px 0px 3px #ff158b;
+  text-shadow: 0px 0px 2px #ff158b;
 }
 
 .test-home__btn:hover {
-  opacity: 50%;
+  background-color: #ff158b;
+  color: #fff;
+  text-shadow: 0px 0px 1px #fff;
 }
 
 .test-home__title {
-  padding: 0px 5px;
+  padding: 15px;
+  font-size: 21px;
 }
 
 .test-home__description {
-  padding: 7px 3px;
+  padding: 20px;
 }
 
 /* .test-home__numbers-questions-text {
@@ -301,10 +321,9 @@
 
 .article-card {
   padding-bottom: 10px;
-  border-radius: 15px;
-  max-width: 300px;
-  max-height: 900px;
-  background-color: #222222;
+  border-radius: 20px;
+  width: 420px;
+  background-color: #2e2e2e;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -312,21 +331,45 @@
   font-size: 16px;
   transition: all 0.3s ease;
   text-align: center;
-  margin-top: 40px;
 }
 
-.article-card-img {
+.article-card + .article-card {
+  margin-left: 10px;
+}
+
+.article-card__img {
   width: 100%;
+  height: 250px;
   border-radius: 15px 15px 0px 0px;
-  max-height: 190px;
 }
 
-.article-card-title {
-  padding: 10px 5px;
+.article-card__title {
+  padding: 20px 10px;
 }
 
 .article-card:hover {
-  box-shadow: 0px 0px 15px #d503ff;
+  box-shadow: 0px 0px 25px #ff158b;
+  outline: #ff158b 4px solid;
+  transform: scale3d(1.07, 1.07, 1.07);
+}
+
+.article-card__description {
+  padding: 10px 10px;
+  padding-bottom: 30px;
+  color: rgba(255, 255, 255, 0.578);
+}
+
+.article-card__body {
+  height: 250px;
+}
+
+.article-card__reactions {
+  border-top: #202020 1px solid;
+  padding-top: 10px;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
 }
 
 .article__paragraphs-text {
@@ -390,7 +433,7 @@
     font-size: 12px;
   }
   .test {
-    max-width: 250px;
+    max-width: 320px;
   }
 
   .test + .test {
