--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,11 @@
 }
 
 body {
-  background-color: #121212;
-  font-family: "Montserrat Alternates", sans-serif;
+  background-color: #202020;
+  font-family: "Montserrat", sans-serif;
   font-size: 18px;
   font-weight: 400;
-  color: #f0f0f0;
+  color: #fff;
 }
 
 ul {
@@ -19,6 +19,16 @@ ul {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+input {
+  font-family: inherit;
+  font-size: inherit;
+  text-decoration: none;
+  color: inherit;
+  outline: none;
+  background-color: #121212;
+  border: none;
 }
 
 button {
