--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -77,16 +77,19 @@
 @media screen and (max-width: 576px) {
   .header__logo {
     font-size: 12px;
-    font-weight: 400;
-    text-align: center;
+    text-align: left;
+    max-width: 110px;
   }
 
   .header__logo-img {
     max-width: 25px;
-    margin-left: 7px;
+    margin-left: 0px;
   }
-
+  .navigation__item {
+    margin-bottom: 2px;
+  }
   .navigation__link {
     font-size: 12px;
+    padding: 13px;
   }
 }
