--- a/src/components/style.css
+++ b/src/components/style.css
@@ -377,16 +377,27 @@
 }
 
 /* =======================article================== */
+.article__inner {
+  padding: 30px;
+  background-color: #2e2e2e;
+  border-radius: 15px;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
-.article__text {
+.article__title {
   padding: 20px 0px;
+  border-bottom: 1px #12121287 solid;
+}
+.article__text {
+  padding: 25px 0px;
 }
 
 .article__img {
   width: 100%;
-  /* max-height: 350px; */
-  /* border-radius: 110px;
-  padding: 50px 50px; */
+
   border-radius: 15px;
   margin-top: 20px;
 }
@@ -397,6 +408,7 @@
 
 .article__paragraphs-text {
   padding: 5px 0px;
+  color: rgba(255, 255, 255, 0.932);
 }
 
 /* =================Адаптив================ */
