--- a/src/components/style.css
+++ b/src/components/style.css
@@ -219,7 +219,7 @@
 .test-result__answers {
   margin: 0 auto;
   padding: 20px;
-  background-color: #222222;
+  background-color: #2e2e2e;
   max-width: 700px;
   border-radius: 15px;
   text-align: center;
@@ -233,7 +233,7 @@
 
 .test-result__answer-value {
   padding: 10px 20px;
-  background-color: #121212;
+  background-color: #202020;
   border-radius: 7px;
   transition: all 0.3s ease;
   text-align: center;
