--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -6,13 +6,14 @@
 }
 
 .home__title-img {
-  max-width: 68px;
-  margin-left: 4px;
+  max-width: 58px;
+  margin-left: 7px;
 }
 
 .home__tests {
   padding: 40px 0px;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .home__articles {
@@ -76,6 +77,15 @@
 .new-value__title-img {
   max-width: 65px;
   margin-left: 4px;
+}
+
+/* ================ Tests ================== */
+.tests__inner {
+}
+.tests__tests-cards {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 /* =================Адаптив================ */
