--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -19,6 +19,7 @@
 .home__articles {
   padding: 40px 0px;
   display: flex;
+  flex-wrap: wrap;
 }
 
 /* ==================== new test ==================== */
